better for production

--- a/onlineStore/public/views/login.html
+++ b/onlineStore/public/views/login.html
@@ -29,7 +29,7 @@
 
             <div id="g_id_onload"
                     data-client_id="708309533369-seta0qag3n2t6n0ph6ppalt9gkesjsej.apps.googleusercontent.com"
-                    data-context="signup"
+                    data-context="signin"
                     data-ux_mode="popup"
                     data-callback="googleSign"
                     data-auto_prompt="false">
