--- a/onlineStore/public/views/shop.html
+++ b/onlineStore/public/views/shop.html
@@ -500,49 +500,55 @@
             <span><i class="fa-solid fa-gift"></i></span>
           </p>
         </div>
-    
+  
         <div class="row second-footer">
-          <div class="col-3 list">
-            <h6>Browse</h6>
-            <div class="list">
-              <a>All products</a>
-              <a>About us</a>
-              <a>Blog</a>
+  
+          <div class="col-lg-6 row">
+            <div class="col-6">
+              <h6>Browse</h6>
+              <div class="list">
+                <a>All products</a>
+                <a>About us</a>
+                <a>Blog</a>
+              </div>
+            </div>
+            <div class="col-6">
+              <h6>Help</h6>
+              <div class="list">
+                <a>FAQ</a>
+                <a>Terms & conditions</a>
+                <a>Contact us</a>
+              </div>
             </div>
           </div>
-          <div class="col-3">
-            <h6>Help</h6>
-            <div class="list">
-              <a>FAQ</a>
-              <a>Terms & conditions</a>
-              <a>Contact us</a>
+  
+          <div class="col-lg-6 row">
+            <div class="col-6">
+              <h6>About</h6>
+              <p>
+                Our story began in 2001 in a small studio in the middle of nowhere.
+                With only one desk and next to no free time, our brand was born. Our
+                passion for unique design and collaboration brought our vision, and
+                products, to life.
+              </p>
+            </div>
+            <div class="col-6">
+              <h6>Contact</h6>
+              <p>store@email.com</p>
+              <div class="icons">
+                <a href="https://www.instagram.com/"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="https://www.facebook.com/"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+                <a href="https://twitter.com/home"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </div>
             </div>
           </div>
-    
-          <div class="col-3">
-            <h6>About</h6>
-            <p>
-              Our story began in 2001 in a small studio in the middle of nowhere.
-              With only one desk and next to no free time, our brand was born. Our
-              passion for unique design and collaboration brought our vision, and
-              products, to life.
-            </p>
-          </div>
-          <div class="col-3">
-            <h6>Contact</h6>
-            <p>store@email.com</p>
-            <div class="icons">
-              <a href="https://www.instagram.com/"
-                ><i class="fa-brands fa-instagram"></i
-              ></a>
-              <a href="https://www.facebook.com/"
-                ><i class="fa-brands fa-facebook"></i
-              ></a>
-              <a href="https://twitter.com/home"
-                ><i class="fa-brands fa-twitter"></i
-              ></a>
-            </div>
-          </div>
+  
         </div>
       </footer>
 
