--- a/onlineStore/public/views/index.html
+++ b/onlineStore/public/views/index.html
@@ -79,8 +79,7 @@
             <a href="/views/index.html">Home</a>
             <a href="/views/login.html">Sign in</a>
             <a href="/views/shop.html">Store</a>
-            <a>Blog</a>
-            <a style="color: red">Sale</a>
+            <a id="adminPanelNav2" class="d-none" href="/admin" style="color: black;">Admin Panel</a>
           </div>
         </div>
         <div class="m-navbar">
@@ -130,6 +129,7 @@
               </div>
             </li> -->
             <li><a href="/views/shop.html">Store</a></li>
+            <li><a id="adminPanelNav" class="d-none" href="/admin" style="color: black;">Admin Panel</a></li>
             <!-- <li><a href="/views/Blog.html">Blog</a></li> -->
             <!-- <li><a style="color: red" >Sale</a></li> -->
           </ul>
@@ -138,7 +138,7 @@
         <div class="s-navbar">
           <ul style="z-index: 1000">
 
-            <li><a id="adminPanelNav" class="d-none" href="/admin" style="color: black;">Admin Panel</a></li>
+            <li></li>
 
             <li class="user"><button><a style="color:black" href="/views/login.html"><i
               class="fa-solid fa-user"></i></a></button></li>
