--- a/onlineStore/public/views/product.html
+++ b/onlineStore/public/views/product.html
@@ -71,6 +71,7 @@
                 <a>Sign in</a>
                 <a href="/views/index.html">Home</a>
                 <a href="/views/shop.html">Store</a>
+                <a id="adminPanelNav2" class="d-none" href="/admin" style="color: black;">Admin Panel</a>
     
             </div>
         </div>  
@@ -79,6 +80,7 @@
         
                 <li><a href="/views/index.html">Home</a></li>
                 <li><a href="/views/shop.html">Store</a></li>
+                <li><a id="adminPanelNav" class="d-none" href="/admin" style="color: black;">Admin Panel</a></li>
                                 
             </ul>
         </div>
