--- a/onlineStore/public/views/shop.html
+++ b/onlineStore/public/views/shop.html
@@ -64,6 +64,7 @@
             <a href="login.html">Sign in</a>
             <a href="index.html">Home</a>
             <a href="shop.html">Store</a>
+            <a id="adminPanelNav2" class="d-none" href="/admin" style="color: black;">Admin Panel</a>
            <!--  <a href="Blog.html">Blog</a>
             <a style="color:red">Sale</a> -->
 
@@ -110,6 +111,7 @@
             </li> -->
             <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Store</a></li>
+            <li><a id="adminPanelNav" class="d-none" href="/admin" style="color: black;">Admin Panel</a></li>
             <!-- <li><a href="Blog.html">Blog</a></li>
             <li><a style="color:red">Sale</a></li> -->
 
