--- a/onlineStore/public/stylesheets/adminPanel/main.css
+++ b/onlineStore/public/stylesheets/adminPanel/main.css
@@ -3,7 +3,7 @@ body,html{
     margin: 0px;
     padding: 0px;
     display: flex;
-    width: 100%;
+    width:fit-content;
     background-color: rgb(245, 247, 250);
     --black:#3d464d;
     --yellow:#ffd333;
