improve admin search

--- a/onlineStore/public/views/adminPanelPages/users.html
+++ b/onlineStore/public/views/adminPanelPages/users.html
@@ -41,7 +41,7 @@
         <tr>
             <th colspan="8">
                 <div class="search">
-                    <i class="fa-solid fa-magnifying-glass"></i><input type="text" id="search" placeholder="Start typing to search products">
+                    <i class="fa-solid fa-magnifying-glass"></i><input type="text" id="search" placeholder="Start typing to search email">
                 </div>
             </th>
         </tr>
@@ -50,7 +50,7 @@
     <thead>
         <tr>
             <th>
-                first Name
+                First Name
             </th>
             <th>
                 Last Name
